[tool.poetry]
name = "repl_python3_TestBotCode"
version = "0.1.0"
description = "Just a Multi-Purpose Discord Bot"
authors = ["Siddharta Dutta <siddhartadutta99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
youtube_dl = "^2021.6.6"
tensorflow = "^2.6.0"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
